# packit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.bat  install.sh  rustfmt.toml  test.bat  test.sh
.cargo/: config.toml
docs/: README.md  metadata.md  verifier.md
src/: command_handler.rs  commands.rs  config.rs  dependency.rs  error_handling.rs  history.rs  installed_packages.rs  issue.rs  logger.rs  main.rs  packager.rs  repairer.rs  target_architecture.rs  verifier.rs  version.rs
src/builder/: build_env.rs  builder.rs  error.rs  mod.rs  patcher.rs
src/cli/: commands.rs  display.rs  error.rs  mod.rs  parameter_checks.rs  progressbar.rs  prompts.rs  reader.rs  spinner.rs
src/cli/commands/: check.rs  config.rs  fix.rs  info.rs  init.rs  install.rs  link.rs  list.rs  package.rs  repositories.rs  search.rs  switch.rs  uninstall.rs  unlink.rs  update.rs  util.rs
src/cli/commands/util/: checksum.rs  meta_check.rs  package.rs  portable_repo.rs
src/cli/display/: aligned_print.rs  deprecation.rs  error.rs  grid.rs  logging.rs  message.rs  mod.rs  not_found.rs  progressbar.rs  prompts.rs  reader.rs  spinner.rs  standard_print.rs  styled.rs
src/cli/subcommands/: install.rs  list.rs  mod.rs  repositories.rs  uninstall.rs
src/installer/: build_env.rs  builder.rs  error.rs  install_tree.rs  installer.rs  mod.rs  options.rs  scripts.rs  symlinker.rs  unpack.rs
src/installer/types/: dependency.rs  mod.rs  optional_id.rs  package_id.rs  package_name.rs  version.rs  version_bounds.rs  version_intervals.rs  version_number.rs
src/integrity/: checks.rs  error.rs  issue.rs  repairer.rs  utils.rs  verifier.rs
src/integrity/repairer/: general.rs  initial.rs  package.rs
src/integrity/verifier/: general.rs  initial.rs  package.rs
src/register/: error.rs  installed_package.rs  installed_package_version.rs  package_register.rs
src/repositories/: default.rs  error.rs  filesystem.rs  manager.rs  minirepo.rs  mod.rs  portable_repo.rs  provider.rs  repository.rs  types.rs
src/repositories/metadata/: filesystem.rs  mod.rs  web.rs
src/repositories/prebuilds/: filesystem.rs  mod.rs  web.rs
src/repositories/providers/: mod.rs
src/repositories/providers/prebuild/: filesystem.rs  mod.rs
src/repositories/providers/repository/: default.rs  mod.rs  web.rs
src/repositories/types/: checksum.rs  common.rs  index.rs  license.rs  mod.rs  package.rs  package_target.rs  package_version.rs  prebuilds.rs  repository.rs  requirement.rs  target_bounds.rs
src/storage/: error.rs  external_packages.rs  installed_package.rs  installed_package_version.rs  installed_packages.rs  mod.rs  package_register.rs
src/utils/: checksum.rs  constants.rs  duplicates.rs  env.rs  fuzzy.rs  io.rs  ioerror.rs  mod.rs  packit_version.rs  patches.rs  requests.rs  symlink.rs  tree.rs  unwrap_or_exit.rs
src/verifier/: checks.rs  error.rs  issue.rs  mod.rs  repairer.rs  utils.rs  verifier.rs
xtasks/xtask-build-install/: Cargo.toml
xtasks/xtask-build-install/src/: main.rs
xtasks/xtask-package-build/: Cargo.toml
xtasks/xtask-package-build/src/: compress.rs  main.rs  target_architecture.rs
