[package]
name = "packit"
description = "The universal package manager."
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["The Packit Team"]
repository = "https://github.com/pack-it/packit"
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
rust-version = "1.85.0"                                      # Earliest stable compiler for rust 2024 edition

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
tar = "0.4.44"
flate2 = "1.1.9"
indicatif = "0.18.4"
bytes = "1.11.1"
colored = "3.1.1"
tempfile = "3.26.0"
sha2 = "0.10.9"
hex = "0.4.3"
zip = "8.1.0"
regex = "1.12.3"
xz2 = "0.1.7"
lief = { git = "https://github.com/lief-project/LIEF.git" }
url = "2.5.8"

# macOS and Linux dependencies
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2.182"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1.7"
enable-ansi-support = "0.3.1"
windows = "0.62.2"
