[package]
name = "packit"
description = "The universal package manager."
version = "0.0.1"
license = "GPL-3.0-only"
authors = ["The Packit Team"]
repository = "https://github.com/pack-it/packit"
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
rust-version = "1.85.0"                                      # Earliest stable compiler for rust 2024 edition

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
tar = "0.4.45"
flate2 = "1.1.9"
indicatif = "0.18.4"
bytes = "1.11.1"
colored = "3.1.1"
tempfile = "3.27.0"
sha2 = "0.11.0"
hex = "0.4.3"
zip = "8.5.1"
regex = "1.12.3"
xz2 = "0.1.7"
lief = { git = "https://github.com/lief-project/LIEF.git", rev = "1915b921dee222912880cfb8b1ddce0a00ca88cd" }
url = "2.5.8"
toml_edit = "0.25.11"
terminal_size = "0.4.4"
diffy = { version = "0.5.0", features = ["binary"] }

# macOS and Linux dependencies
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2.184"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1.7"
enable-ansi-support = "0.3.1"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
] }
